<resources>
    <string name="app_name">FIT-I</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">홈</string>
    <string name="matching">매칭내역</string>
    <string name="chat">채팅</string>
    <string name="mypage">마이페이지</string>
    <string name="pt">개인PT</string>
    <string name="diet">다이어트</string>
    <string name="eating">식단관리</string>
    <string name="friend">운동친구</string>
    <string name="medical">재활치료</string>
    <string name="kakao_app_key">78fa9b34400ac36c567656199e53f636</string>
    <string name="naver_client_id">xD_2K4xveAL2qBrM7dlp</string>
    <string name="naver_client_secret">FUMNbsrj2C</string>

    <string name="match_request">매칭 요청</string>
    <string name="see_more_review">></string>
    <string name="wave">~</string>
    <string name="report_ad">요청서와 관련없는 광고/홍보/영업</string>
    <string name="report_fake_profile">허위 프로필 작성</string>
    <string name="report_invalid_link">유효하지 않은 카카오톡 링크</string>
    <string name="report_bad_word">부적절한 언어(욕설, 성희롱 등) 사용</string>
    <string name="report_illegal">관련 법령 등을 위반하는 요청</string>
    <string name="report_title">사유선택</string>
    <string name="done_report">신고하기</string>
    <string name="report_email">서비스 진행중 문제가 생겼다면 증빙자료(사진, 녹취록, 대화 내역)와 함께 이메일 fitiofficial@naver.com 로 접수해주세요. 신고 결과는 별도의 안내를 드리지 않습니다.</string>
    <string name="report_info">신고하기 사유 확인이 불가능한 경우 해당 신고는 미조치됩니다.</string>

</resources>